2024-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-name-prefix): New defconst.
	(tramp-fuse-mount-point): Use it.

2024-11-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-maybe-open-connection): Rename file
	property "process-attributes" to connection property
	" process-attributes".

	* tramp.el (tramp-get-process-attributes)
	(tramp-handle-list-system-processes): Rename file property
	"process-attributes" to connection property " process-attributes".
	(tramp-compute-multi-hops): Check for
	`tramp-sh-file-name-handler-p', it works only for this.
	(tramp-action-password, tramp-process-actions): Use connection
	property "hop-vector".
	(tramp-read-passwd, tramp-clear-passwd): Rewrite.  (Bug#74105)

	* tramp-sh.el (tramp-maybe-open-connection): Use connection
	property "hop-vector".

	* tramp.el (tramp-read-passwd):
	* tramp-sh.el (tramp-maybe-open-connection):
	* tramp-sudoedit.el (tramp-sudoedit-send-command): Rename
	connection property "password-vector" to "pw-vector".

2024-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties):
	Don't dump properties starting with a space.

	* tramp-cache.el:
	* tramp.el:
	* tramp-adb.el:
	* tramp-androidsu.el:
	* tramp-cmds.el:
	* tramp-crypt.el:
	* tramp-gvfs.el:
	* tramp-sh.el:
	* tramp-smb.el: Rename connection properties "process-name",
	"process-buffer" and "first-password-request" to " process-name",
	" process-buffer" and " first-password-request, repectively".

2024-11-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-read-passwd): Check for `auth-sources' being
	non-nil.

2024-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Don't call
	`tramp-add-hops' during file name completion.
	(tramp-handle-file-name-as-directory)
	(tramp-handle-file-name-directory): Use `tramp-cache-undefined'
	for an empty `tramp-default-proxies-alist'.